[package]
name = "roboplc-rpc"
version = "0.1.0"
authors = ["Serhij S. <div@altertech.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/roboplc/roboplc-rpc"
description = "Fast and platform-independent JSON-RPC 2.0"
readme = "README.md"
keywords = ["rpc", "json-rpc", "nostd"]

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = ["full"]

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
http = { version = "^1.0.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tracing = { version = "0.1", features = ["log"] }
url = { version = "1.6", optional = true }

[features]
default = ["std"]
std = ["serde_json"]
msgpack = ["rmp-serde"]
http = ["dep:http", "url", "serde_json"]
full = ["std", "msgpack", "http"]
canonical = []

[dev-dependencies]
env_logger = "0.10"
