[package]
name = "roboplc-rpc"
version = "0.1.7"
authors = ["Serhij S. <div@altertech.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/roboplc/roboplc-rpc"
description = "Fast and platform-independent JSON-RPC 2.0"
readme = "README.md"
keywords = ["rpc", "json-rpc", "nostd"]

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = ["full"]

[dependencies]
heapless = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

# std
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }

# msgpack
rmp-serde = { version = "1.3", optional = true }

# http
http = { version = "^1.0.0", optional = true }
url = { version = "1.6", optional = true }
thiserror = { version = "2.0", optional = true }

[features]
default = ["std"]
canonical = []

std = ["serde_json", "tracing", "serde/std"]
msgpack = ["rmp-serde"]
http = ["dep:http", "url", "serde_json", "thiserror"]
full = ["std", "msgpack", "http"]

[dev-dependencies]
env_logger = "0.10"
tracing = { version = "0.1", features = ["log"] }
